<resources>
    <string name="app_name">CloneChat</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="action_username">Username</string>
    <string name="action_password">Password</string>
    <string name="action_repeatpassword">Repeat password</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_loginsuccess">Login was successful!</string>
    <string name="working">Working...</string>
    <string name="password_dont_match">Passwords do not match</string>
    <string name="username_cant_be_empty">Username cannot be empty</string>
    <string name="password_cant_be_empty">Password cannot be empty</string>
</resources>
