<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".LoginActivity"
    android:background="#9189C7"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/action_username"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/action_password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_sign_in"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/action_sign_in"
        android:textAllCaps="false"
        android:textColor="#E4E1F5"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="#6960A9"/>


</LinearLayout>
