<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    style="@style/Background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="110dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edittext_username_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/action_username"
                android:inputType="text"
                style="@style/TextInput"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edittext_password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/action_password"
                android:inputType="textPassword"
                style="@style/TextInput"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edittext_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/action_repeatpassword"
                android:inputType="textPassword"
                style="@style/TextInput"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_new_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_sign_in"
            android:text="@string/action_register"
            style="@style/LargeButton"/>
    </LinearLayout>


</LinearLayout>
